# ImageLockdown

./: .gitignore  CMakeLists.txt  Makefile  README.md  crypto_utils.cpp  crypto_utils.h  desencriptado1.cpp  encrypt.cpp  input.txt  main.cpp  utils.cpp  utils.h
assets/: test-sample-images.ods  testingBuffers.ods
